# myxo-lab

./: .checkov.yaml  .env.example  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  _typos.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: gitmoji-pattern.txt  pre-commit-gate.sh  sync-gitmoji-pattern.sh
.claude/skills/code-structure/: SKILL.md
.claude/skills/commit-rules/: SKILL.md
.claude/skills/pr-rules/: SKILL.md
.claude/skills/python-code-structure/: SKILL.md
.claude/skills/rust-code-structure/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml
.github/scripts/: pr-title-lint.py
.github/workflows/: container-build.yml  kanban-sync.yml  lint.yml  myxo-procedure.yml  myxo-verify.yml  petri-preview.yml  pr-title-lint.yml  pulumi-preview.yml  release.yml  reusable-python-ci.yml  rust.yml  security.yml  typos.yml
.myxo/: rules.md
.myxo-lab/: config.yaml
.myxo-lab/myxos/: gitignore-setup.md
.myxo-lab/protocols/: testing.md  write-test.md
.myxo/protocols/: create-pr.md  run-migration.md  write-test.md
container/: Dockerfile  devbox.json
crates/myxo-cli/: Cargo.toml
crates/myxo-cli/src/: main.rs
crates/myxo-cli/tests/: cli_test.rs
crates/myxo-core/: Cargo.toml
crates/myxo-core/src/: config.rs  frontmatter.rs  lib.rs  prompt_cache.rs  rules_validator.rs  sanitizer.rs  secure_fs.rs  syncer.rs  verifier.rs
docs/adr/: 0001-record-architecture-decisions.md  0002-rust-migration.md  0003-polyglot-repository.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  cleanup.py  common.py  constants.py  ecs.py  frontend_preview.py  github_app.py  infisical.py  infisical_client.py  preview.py  pyproject.toml  secrets.py  stale_cleanup.py
infra/ecs/: __init__.py  cluster.py  ecr.py  efs.py  task.py
lambda/pr_cleanup/: handler.py
lambda/stale_cleanup/: handler.py
scripts/: setup-dev.sh
src/myxo/: __init__.py  cached_github.py  cli.py  etag_cache.py  github_app.py  myxo_task.py  prompt_cache.py  protocol_loader.py  rate_limiter.py  rules_validator.py  sanitizer.py  secure_filesystem.py  syncer.py  verifier.py
tests/: conftest.py  helpers.py  test_adr.py  test_cached_github.py  test_ci_optimization.py  test_cleanup_infra.py  test_cli.py  test_container.py  test_container_build_workflow.py  test_contributing.py  test_dependabot.py  test_ecs_infra.py  test_etag_cache.py  test_fargate_optimization.py  test_frontend_preview_infra.py  test_github_app.py  test_github_app_infra.py  test_github_app_token_workflow.py  test_gitleaks.py  test_infisical_client.py  test_infisical_infra.py  test_infra.py  test_infra_class_style.py  test_init_command.py  test_jscpd.py  test_kanban_sync_workflow.py  test_linter_config.py  test_mcp_settings.py  test_myxo_dir.py  test_myxo_task.py  test_nextest_config.py  test_petri_workflow.py  test_pr_cleanup_handler.py  test_pr_title_lint.py  test_preview_infra.py  test_procedure_flow.py  test_prompt_cache.py  test_protocols.py  test_pulumi_labels.py  test_pulumi_preview_workflow.py  (+22 more)
