[project]
name = "myxo"
version = "0.1.0"
description = "AI Agent Infrastructure Platform — inspired by the distributed intelligence of slime molds."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx",
    "pyyaml",
    "rich",
    "pulumi>=3.227.0",
    "pulumi-github>=6.12.1",
]

[project.scripts]
myxo = "myxo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myxo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
