[project]
name = "myxo"
version = "0.1.0"
description = "AI Agent Infrastructure Platform — inspired by the distributed intelligence of slime molds."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx",
    "pyjwt[crypto]",
    "pyyaml",
    "rich",
    "pulumi>=3.227.0",
    "pulumi-github>=6.12.1",
]

[project.scripts]
mxl = "myxo.cli:app"
myxo = "myxo.cli:app"  # kept for migration period

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myxo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "small: Fast unit tests (no network, no disk beyond tmp_path, no DB)",
    "medium: Integration tests (may use network, disk, or local services)",
    "large: End-to-end / system tests (external services, long-running)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
