[package]
name = "myxo-cli"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "mxl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
myxo-core = { path = "../myxo-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
