[package]
name = "myxo-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
name = "myxo_core"
path = "src/lib.rs"

[dependencies]
glob-match = "0.2"
hex = "0.4"
octocrab = "0.44"
regex = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
